College profile base layout without transition

--- a/clgprof.html
+++ b/clgprof.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ReadPage</title>
+<title>College Profile</title>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/font-awesome.css" />
 <link rel="stylesheet" type="text/css" href="myCSS/MenuBar.css" />
@@ -62,6 +63,78 @@
 <!--____________________MENU BAR END________________________________-->
 
 
+<div>&nbsp</div>
+<br>
+<br>
+ <div style="width: 100%">
+ <div style="width: 20%;float: right;font-size: 120%"" > College Societies:
+ <br>
+ <ul>
+ 	<li>Quizzine</li>
+ 	<li>Buniyaad</li>
+ </ul>
+ </div>
+	<div  style="width: 80%;border-left: 0px;border-top: 0px;border-bottom: 0px;border-right: 1px; border-style: solid">
+	<table >
+	
+	<tr>
+	<td rowspan="8" colspan="2">
+
+	<img src="gbpec.jpg">
+		</td>
+	<td colspan="3" style="text-align: center;font-size: 300%">
+	G. B. Pant Government Engineering College</td>
+
+	</tr>
+
+<tr> 
+<td rowspan="2" colspan="2" style="text-align: center;font-size: 150%" >
+	&nbsp<br>
+	Desciption 1:
+	<br>&nbsp
+</td>
+</tr>
+<tr></tr>
+<tr> 
+<td rowspan="2"  colspan="2" style="text-align: center;font-size: 150%" >
+	&nbsp<br>
+	Desciption 2:
+	<br>&nbsp
+</td>
+</tr>
+<tr></tr>
+<tr> 
+<td  rowspan="2" colspan="2" style="text-align: center;font-size: 150%">
+	&nbsp<br>
+	Desciption 3:
+     <br>&nbsp
+</td>
+</tr>
+	</table> 
+<hr style="border-color: black ">
+	</div>
+	</div>
+
+<div id="society events">
+	
+</div>
+
+<div style="width: 80%;text-align: center;border-left: 0px;border-top: 0px;border-bottom: 0px;border-right: 1px; border-style: solid">
+	<h1>FESTS</h1>
+	<button type="submit" style="font-size: 120%">
+<img src="inceptum.jpg" alt="Inceptum"/>
+<br/>
+Inceptum-Annual Tech Fest
+</button>
+&nbsp &nbsp
+<button type="submit" style="font-size: 120%">
+<img src="Riwaayat.jpg" alt="Riwaayat"/>
+<br/>
+Drama-Theatrical fest
+</button>
+<br>
+<hr style="border-color: black ">
+</div>
 <!--signup content start-->
 
 <div class="mainWrap" id="mainWrap_id">
@@ -108,5 +181,8 @@
 </div>
 
 <!--signup content end-->
+
+
+
 </body>
 </html>
