removed changes and added register link

--- a/Fest.html
+++ b/Fest.html
@@ -121,21 +121,24 @@ function openAbout() {
 <div id="eventimage" style="float: left;width: 5%"><img id="myImg" src="Gbpec.jpg"></div>
   <!--beginning of left div-->
 <div style="float:left;width:75%">
- <div id="second">Event Name:  National Seminar on Material and applications
-<br><br>
-Category: National Seminar
-<br><br>
-Organiser: K Ramakrishnan College of Technology
-<br><br>
-Location:  Trichy, Tamil Nadu
-<br><br>
-Event: Dates 30th March 2017
+ <div id="second"> 
+ <ul id="event_name">Event Name:  National Seminar on Material and applications</ul>
+<br>
+<ul id="category">Category: National Seminar</ul>
+<br>
+<ul id="organizer">Organiser: K Ramakrishnan College of Technology</ul>
+<br>
+<ul id="location">Location:  Trichy, Tamil Nadu</ul>
+<br>
+<ul id="date">Event: Dates 30th March 2017</ul>
+<br>
+<ul id="reg"><a href="https://www.google.co.in/">Proceed to registration</a></ul>
 </div>
 <div class="tab" >
-	<button  class="tablinks" onclick="openfest('About')"> &nbsp&nbsp ABOUT &nbsp&nbsp     </button>
-	<button class="tablinks" onclick="openfest('Event List')">  &nbsp&nbspEVENTS LIST&nbsp&nbsp  </button>
-    <button class="tablinks" onclick="openfest('Register')"> &nbsp&nbsp&nbsp&nbsp REGISTER &nbsp&nbsp&nbsp&nbsp </button>
-    <button class="tablinks" onclick="openfest('Contacts')"> &nbsp&nbsp&nbsp&nbsp CONTACT &nbsp&nbsp &nbsp&nbsp&nbsp&nbsp </button>
+	<button  style="padding-left: 50px;padding-right: 50px;font-size: 20px" class="tablinks" onclick="openfest('About')"> ABOUT  </button>
+	<button  style="padding-left: 50px;padding-right: 50px;font-size: 20px" class="tablinks" onclick="openfest('Event List')">  EVENTS LIST  </button>
+   <!-- <button class="tablinks" onclick="openfest('Register')">  REGISTER </button> -->
+    <button style="padding-left: 50px;padding-right: 50px;font-size: 20px" class="tablinks" onclick="openfest('Contacts')">  CONTACT  </button>
     <!--<button class="tablinks" onclick="openfest(event,'Other Events')">&nbsp&nbsp &nbsp &nbsp Other Events &nbsp&nbsp</button>-->
 </div>
 <div id="open"></div>
@@ -154,14 +157,14 @@ Event: Dates 30th March 2017
                                               Department of Mechanical Engineering<br>
                                               National University of Singapore</p></div>
  <!--Register Details-->
-     <div id="Register" class="tabcontent"><p>National Seminar on Material and applications Registration Fees :</p>
+  <!--   <div id="Register" class="tabcontent"><p>National Seminar on Material and applications Registration Fees :</p>
      <p>Rs: 200/-<br>
         Registration must be done by DD<br>
         DD should be in favor of "The Principal<br>
         K.Ramakrishnan college of Technology<br>
         Samayapuram<br>
         Trichy 621 112"</p>
-        <button>Register Now</button></div>
+        <button>Register Now</button></div>    -->
 
         <!--Contact Details-->
         <div id="Contacts" class="tabcontent"><p>Providing contacts</p></div>
