--- a/Fest.html
+++ b/Fest.html
@@ -215,7 +215,7 @@ function jsfunction(a){
  <br>
  <ul class="mylist" style="list-style-type: none">
 <div>Similar Events:</div>
-<marquee direction="up">
+<marquee direction="up"  onmouseover="this.stop();" onmouseout="this.start();">
   <div class="myline"></div>
   <li ><div class="socdiv" onclick="jsfunction('event1')" >
     <span><img src="Gbpec.jpg" width="40%" height="40%" ></span>
